Proper blog interface with MySQL

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/ico" />
 		<style>
 			.mdl-layout__drawer-button > .material-icons { margin: 10px; }
-			.mdl-card { width: 100%; }
+			.mdl-card { width: 100%; margin-top: 5px; margin-bottom: 10px; }
 			#openlogin { text-decoration: underline; cursor: pointer; }
 		</style>
 		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
